# BackcastPro

./: .coverage  .gcloudignore  .gitignore  404.html  AGENTS.md  BackcastPro_2api_2____init_____8py.html  BackcastPro_2api_2lib_2____init_____8py.html  README.md  __stats_8py.html  annotated.html  annotated_dup.js  backtest_8py.html  backtest_8py.js  board_8py.html  board_8py.js  chart_8py.html  chart_8py.js  classes.html  classsrc_1_1BackcastPro_1_1__broker_1_1__Broker-members.html  classsrc_1_1BackcastPro_1_1__broker_1_1__Broker.html  classsrc_1_1BackcastPro_1_1__broker_1_1__Broker.js  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1CandleBar-members.html  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1CandleBar.html  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1LightweightChartWidget-members.html  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1LightweightChartWidget.html  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1LightweightChartWidget.js  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1MarkerData-members.html  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1MarkerData.html  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1VolumeBar-members.html  classsrc_1_1BackcastPro_1_1api_1_1chart_1_1VolumeBar.html  classsrc_1_1BackcastPro_1_1api_1_1db__manager_1_1db__manager-members.html  classsrc_1_1BackcastPro_1_1api_1_1db__manager_1_1db__manager.html  classsrc_1_1BackcastPro_1_1api_1_1db__manager_1_1db__manager.js  classsrc_1_1BackcastPro_1_1api_1_1db__stocks__board_1_1db__stocks__board-members.html  classsrc_1_1BackcastPro_1_1api_1_1db__stocks__board_1_1db__stocks__board.html  (+159 more)
.claude/: hand-off-download.md  (+2 more)
(+234 files in other folders)
