[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BackcastPro"
version = "0.2.1"
authors = [
  { name="botterYosuke" },
]
description = "トレーディング戦略のためのPythonバックテストライブラリ"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.0.0",
    "scipy>=1.7.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "duckdb>=0.9.0",
    "pandas-datareader>=0.10.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.50.0",
]
yfinance = [
    "yfinance>=0.2.0",
]
all = [
    "BackcastPro[ui,yfinance]",
]

[project.urls]
Homepage = "https://github.com/botterYosuke/BackcastPro/"
Issues = "https://github.com/botterYosuke/BackcastPro/issues"
Logo = "https://raw.githubusercontent.com/botterYosuke/BackcastPro/main/docs/img/logo.drawio.svg"

[tool.hatch.build.targets.wheel]
packages = ["src/BackcastPro"]

